--- a/package.json
+++ b/package.json
@@ -26,16 +26,10 @@
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.3",
     "log4js": "^2.3.3",
-    "material-ui": "^0.18.5",
     "moment": "^2.18.1",
     "nimble": "0.0.2",
-    "node-rules": "^3.1.0",
     "object-hash": "^1.1.8",
     "pg": "^6.1.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-router-dom": "^4.2.2",
-    "react-tap-event-plugin": "^2.0.1",
     "serve-favicon": "~2.4.2",
     "underscore": "^1.8.3"
   },
@@ -48,18 +42,10 @@
     "babel-preset-stage-1": "^6.24.1",
     "coffee-coverage": "^2.0.1",
     "coveralls": "^2.13.1",
-    "eslint": "^4.5.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.3.0",
-    "eslint-plugin-standard": "^3.0.1",
     "istanbul": "^0.4.5",
     "jsdoc": "^3.5.4",
     "mocha": "^3.5.0",
-    "sinon": "^3.2.1",
-    "webpack": "^2.6.1"
+    "sinon": "^3.2.1"
   },
   "repository": {
     "type": "git",
